# plutus-partial-tx

./: .gitignore  LICENSE  Makefile  README.md  cabal.project  flake.nix  plutus-partial-tx.cabal
example/: Main.hs
example/Api/: Types.hs
example/BPI/Testnet/: Setup.hs
example/frontend/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
example/frontend/src/: index.ts
lucid-partialtx/: build.ts  deno.json  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
lucid-partialtx/example/: index.ts
lucid-partialtx/plutus/: types.ts
lucid-partialtx/src/: mod.ts  partial.ts
lucid-partialtx/src/plutus/: types.ts
src/: Utils.hs
src/Plutus/Contract/: PartialTx.hs
testnet/: query-tip.sh  set-env.sh  start-cix.sh  start-node.sh
testnet/chain-index/: config.json
testnet/node/: config.json
tests/testnet/chain-index/: config.json
