cabal-version: 3.0
name:          plutus-partial-tx
version:       0.0.1
synopsis:      TODO
description:   TODO
homepage:      https://github.com/mlabs-haskell/plutus-partial-tx
license:
license-file:
author:        MLabs
maintainer:    TODO
copyright:     TODO
category:      TODO
build-type:    Simple

flag dev
  description: Enable lean development
  default:     False
  manual:      True

-- Common sections

common common-configs
  default-language: Haskell2010

common common-ghc-opts
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wredundant-constraints
    -Wmissing-home-modules -Wmissing-export-lists -fwarn-unused-imports

  if !flag(dev)
    ghc-options: -Werror

common common-deps
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , mtl
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-tx
    , ply-core
    , vector
    , text

common common-lang
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

-- Build targets

library
  import:          common-lang
  import:          common-configs
  import:          common-deps
  import:          common-ghc-opts
  exposed-modules:
    Plutus.Contract.PartialTx

  hs-source-dirs:  src

test-suite ply-test-suite
  import:         common-lang
  import:         common-configs
  import:         common-deps
  import:         common-ghc-opts
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , tasty
    , tasty-quickcheck
    , QuickCheck
    , quickcheck-plutus-instances

  hs-source-dirs: tests
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
