cabal-version:      3.0
name:               plutus-partial-tx
version:            0.1.1
homepage:           https://github.com/mlabs-haskell/plutus-partial-tx
author:             Chase <chase@mlabs.city>
license:            MIT
extra-source-files: README.md

flag dev
  description: Enable lean development
  default:     False
  manual:      True

-- Common sections

common common-configs
  default-language: Haskell2010

common common-ghc-opts
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wredundant-constraints
    -Wmissing-home-modules -Wmissing-export-lists -fwarn-unused-imports

  if !flag(dev)
    ghc-options: -Werror

common common-deps
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cardano-ledger-alonzo
    , containers
    , data-default
    , directory
    , filepath
    , lens
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-tx
    , serialise
    , text
    , vector
    , freer-simple
    
common common-lang
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

-- Build targets

library
  import:          common-lang
  import:          common-configs
  import:          common-deps
  import:          common-ghc-opts
  exposed-modules:
    Plutus.Contract.PartialTx
    Utils

  hs-source-dirs:  src

executable partial-tx-server
  import:         common-lang
  import:         common-configs
  import:         common-deps
  import:         common-ghc-opts
  main-is:        Main.hs
  build-depends:
    , aeson-pretty
    , bot-plutus-interface
    , cardano-api           ^>=1.35
    , playground-common
    , plutus-pab
    , plutus-partial-tx
    , plutus-tx-plugin
    , servant
    , servant-client
    , servant-server
    , stm
    , uuid
    , vector
    , wai-extra
    , warp

  other-modules:
    Api.Types
    BPI.Testnet.Setup

  hs-source-dirs: example
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
